KubernetesDeployments/SecurityDeployments/EntryIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entry-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - betterproducts.com
    secretName: betterproducts-tls
  rules:
  - host: betterproducts.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8082
